--- a/style.css
+++ b/style.css
@@ -14,10 +14,18 @@
 body {
   background-color: #14110f;
   color: #f9f6ee;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+header {
+  background-color: #34312d;
+  border-bottom: 2px solid #837d74;
 }
 
 h1 {
   padding: 1.5rem;
+  font-size: 2rem;
 }
 
 .btn {
@@ -28,6 +36,7 @@ h1 {
   border: none;
   color: #f9f6ee;
   border-radius: 25px;
+  transition: background-color 0.3s ease;
 }
 
 .btn:hover {
@@ -36,17 +45,13 @@ h1 {
 
 .results-history {
   width: 60ch;
-  aspect-ratio: 1/1;
-  margin: auto;
-  margin-top: 2rem;
+  aspect-ratio: 2/1;
+  margin: 2rem;
   background-color: #86bbd8;
   color: #14110f;
-  border-radius: 25px;
-  overflow-y: scroll;
-}
-
-.results-history::-webkit-scrollbar {
-    display: none;
+  padding: 1rem;
+  font-size: 1.2rem;
+  border-radius: 15px;
 }
 
 .outcome {
@@ -55,6 +60,40 @@ h1 {
 
 .results {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   margin-block: 2rem;
+  align-items: center;
+  text-align: center;
 }
+
+.container {
+  display: flex;
+  justify-content: center;
+  margin-top: 1.5rem;
+}
+
+.computer-results {
+  margin-left: 0;
+}
+
+.wrapper {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.player-results,
+.computer-results {
+  margin: 0 1rem; /* Adjust as needed */
+}
+
+#reset-button-wrapper {
+    margin-top: 1rem; /* Adjust the margin as needed */
+    display: flex;
+    justify-content: center;
+  }
+
+#reset-button-wrapper button {
+    background-color: #837d74;
+    padding: 0.5rem 1rem;
+  }
